# Junior-club

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/2022-12-04-065459_create_users/: up.sql
backend/migrations/2022-12-04-065512_create_posts/: up.sql
backend/migrations/2022-12-17-072640_create_specific_section/: up.sql
backend/src/: database.rs  main.rs  schema.rs
backend/src/api/: mod.rs  path.rs
backend/src/api/auth/: login.rs  logout.rs  mod.rs
backend/src/api/links/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
backend/src/api/posts/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
backend/src/api/users/: create.rs  mod.rs
backend/src/api/util/: mod.rs
backend/src/auth/: gateway.rs  jwt.rs  mod.rs  processes.rs
backend/src/model/: mod.rs
backend/src/model/link/: json.rs  link.rs  mod.rs  new_link.rs
backend/src/model/post/: mod.rs  new_post.rs  post.rs  post_criteria.rs
backend/src/model/user/: mod.rs  new_user.rs  user.rs
backend/src/structs/: mod.rs  post.rs  user.rs  utils.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  index.js
frontend/src/component/: CardGroup.js  CardInfo.js  ContentContainer.js  CreateAccount.js  CreatePost.js  LogInForm.js  Navigation.js  Post.js  PostSendForm.js  SearchForm.js
frontend/src/page/: CreatePost.js  Java.js  LogIn.js  Main.js  Post.js  Registration.js  Rust.js
