[package]
name = "backend"
version = "1.0.0"
edition = "2021"
authors = ["German <gerlvndv@gmail.com>"]


[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
chrono = { version = "0.4.22", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3.25"
log = "0.4.17"
env_logger = "0.9.1"
bcrypt = "0.13.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
[dependencies.uuid]
version = "1.2.1"
features = ["v4"]